--- a/vscode.settings.json
+++ b/vscode.settings.json
@@ -1,12 +1,33 @@
 {
-  "editor.tabSize": 2,
-  "editor.rulers": [99],
+  "editor.accessibilitySupport": "off",
+  "editor.cursorBlinking": "smooth",
+  "editor.cursorSmoothCaretAnimation": true,
   "editor.fontFamily": "Fira Code",
-  "editor.fontSize": 16,
   "editor.fontLigatures": true,
+  "editor.fontSize": 16,
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  "editor.rulers": [99],
+  "editor.tabSize": 2,
+
+  "eslint.autoFixOnSave": true,
+
+  "git.autofetch": true,
+  "git.enableSmartCommit": true,
+
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
-  "stylelint.enable": true,
+
+  "telemetry.enableTelemetry": false,
+  "telemetry.enableCrashReporter": false,
+
   "window.zoomLevel": 0,
-  "workbench.statusBar.visible": false
+  "window.menuBarVisibility": "toggle",
+  "workbench.colorTheme": "Nord",
+  "workbench.activityBar.visible": false,
+
+  "html.format.endWithNewline": true,
+
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "prettier.singleQuote": true
 }
